# tinyC

./: .gitignore  makefile  stack.yaml  tinyC.cabal
app/: Main.hs  TinyC.hs
src/: AST.hs  Compiler.hs  Graph.hs  MonadNames.hs  NASMAnalysis.hs  NASMGenerator.hs  NASMOptimization.hs  NASMProgram.hs  Parser.hs  Parser.y  Queue.hs  Scanner.hs  Scanner.x  SemanticError.hs  Semantics.hs  SymbolTable.hs  TACAnalysis.hs  TACGenerator.hs  TACOptimization.hs  TACProgram.hs  Tokens.hs  Utility.hs
test/: Spec.hs  TestNASMAnalysis.hs  TestNASMGenerator.hs  TestParser.hs  TestRealLife.hs  TestScanner.hs  TestSemantics.hs  TestSymbolTable.hs  TestTACAnalysis.hs  TestTACGenerator.hs  TestTACOptimization.hs
test/fixtures/: ackermann.c  bigprogram.c  empty.c  euclides.c  fibonacci.c  matrix.c  pointers.c  pointers2.c  pointersbad.c  quicksort.c  quicksort2.c  read_and_write.c  testchar.c  trivial.c  wrong.c
