name:                tinyC
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/t00n/tinyC#readme
license:             BSD3
license-file:        LICENSE
author:              Antoine Carpentier
maintainer:          antoine.carpentier.info@gmail.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scanner
                     , Parser
                     , Semantics
                     , TACGenerator
                     , MonadNames
                     , Utility
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
                     , mtl
                     , monad-supply
                     , transformers
  default-language:    Haskell2010

executable tinyC-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , array
                     , tinyC
  default-language:    Haskell2010

test-suite tinyC-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , array
                     , hspec
                     , QuickCheck
                     , containers
                     , tinyC
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/t00n/tinyC
